# encryptor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
encryptor/: encryptor.cpp
include/: cpuid.h  encryptor.h  password.h
libs/: cpuid.cpp  password.cpp
samples/: input.txt  output2.txt
